# liken

./: .gitignore  NOTICE  README.md  Taskfile.yml  _mkdocs.yml  mkdocs.yml  pyproject.toml  scarp2.py  tox.toml  zensical.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docs.yml  python-validation.yml  release.yml
docs/: index.md  reference.md  releases.md  tutorials.md
docs.BACKUP/api/: dupegrouper.html  index.html
docs.BACKUP/api/dupegrouper/: dataframe.html  strats_library.html
docs.BACKUP/templates/: custom.css  module.html.jinja2
docs/about/: contributing.md  license.md  release-history.md
docs/concepts/: boolean-operators.md  customizing-strategies.md  discrete-strategies.md  first-steps.md  install.md  record-linkage.md  rules-api.md  strategies.md  supported-backends.md  using-synthetic-data.md
docs/concepts/advanced-strategies/: boolean-operators.md  discrete-strategies.md  rules-api.md
docs/concepts/applying-strategies/: dict-api.md  sequential-api.md
docs/explanation/: binary-vs-discrete.md  how-does-it-work.md  performance.md  what-diff-in-apis.md
docs/how-tos/: build-iterative-workloads.md  choose-the-right-api.md  optimise-for-performance.md
docs/in-practice/: common-recipes.md  iterative-workloads.md  performance.md
docs/reference/: custom.md  datasets.md  enlace.md  liken.md  preprocessors.md  processors.md  rules.md  synthetic.md
docs/stylesheets/: extra.css
docs/tutorials/: applying-dedupers.md  custom-dedupers.md  customizing-strategies.md  first-steps.md  record-linkage.md  strategies.md  supported-backends.md  using-synthetic-data.md
docs/tutorials/advanced-strategies/: boolean-operators.md  discrete-strategies.md  rules-api.md
docs/tutorials/applying-strategies/: dict-api.md  sequential-api.md
dupegrouper/: __init__.py  _constants.py  _custom.py  _dataframe.py  _executors.py  _strats_library.py  _strats_manager.py  _types.py  _validators.py  base.py  constants.py  custom.py  dataframe.py  dedupe.py  definitions.py  executors.py  strategies.py  strategy.py  strats.py  strats_combinations.py  strats_library.py  strats_manager.py  types.py  validators.py
dupegrouper/custom/: __init__.py  custom.py
dupegrouper/datasets/: __init__.py  datasets.py  synthetic.py
dupegrouper/rules/: __init__.py  rules.py
dupegrouper/strategies/: __init__.py  compound_columns.py  custom.py  exact.py  fuzzy.py  jaccard.py  strategies.py  strcontains.py  strdedupers.py  strendswith.py  strstartswith.py  tfidf.py
dupegrouper/wrappers/: dataframe.py
dupegrouper/wrappers/dataframes/: _pandas.py  _polars.py  _spark.py
enlace/: __init__.py  _constants.py  _custom.py  _dataframe.py  _executors.py  _strats_library.py  _strats_manager.py  _types.py  _validators.py  dedupe.py
enlace/custom/: __init__.py  custom.py
enlace/datasets/: __init__.py  synthetic.py
enlace/rules/: __init__.py  rules.py
liken/: _constants.py  _custom.py  _dataframe.py  _executors.py  _strats_library.py  _strats_manager.py  _types.py  _validators.py  dedupe.py
liken/datasets/: synthetic.py
overrides/: main.html
src/liken/: __init__.py  _collections.py  _constants.py  _custom.py  _dataframe.py  _dedupers.py  _exceptions.py  _executors.py  _optional.py  _pd_affordances.py  _pipelines.py  _preprocessors.py  _processors.py  _registry.py  _rules.py  _strats_library.py  _strats_manager.py  _types.py  _validators.py  constants.py  custom.py  datasets.py  dedupe.py  exceptions.py  liken.py  preprocessors.py  processors.py  rules.py  types.py  validators.py
src/liken/backends/: __init__.py
src/liken/collections/: __init__.py  base.py  dict.py  pipelines.py
src/liken/core/: backend.py  deduper.py  dispatcher.py  executor.py  registries.py  wrapper.py
src/liken/datasets/: synthetic.py
src/liken/dedupers/: __init__.py  cosine.py  exact.py  fuzzy.py  isin.py  isna.py  jaccard.py  lsh.py  str_contains.py  str_endswith.py  str_len.py  str_startswith.py  tfidf.py
tests/: conftest.py
tests/extras/: __init__.py  test_all_extra.py  test_dask_extra.py  test_pyspark_extra.py  test_ray_extra.py
tests/integration/: __init__.py  test_dedupe_matrix.py  test_matrix.py  test_matrix_and.py  test_matrix_dedupers.py  test_matrix_drop.py  test_matrix_id.py  test_matrix_keep.py  test_matrix_negates.py  test_matrix_partitioned.py  test_matrix_pd_affordances.py  test_matrix_pd_nulls.py  test_matrix_preprocessors.py  test_matrix_spark.py  test_matrix_strats.py  test_matrix_synthesize.py  test_spark.py  test_strategies.py
tests/unit/: __init__.py  test_base.py  test_collections.py  test_constants.py  test_dataframe.py  test_dataframe_wrappers.py  test_dedupe.py  test_dedupers.py  test_executors.py  test_pipeline.py  test_registration.py  test_strategies.py  test_strategy.py  test_strats_library.py  test_strats_manager.py
tests_extras/: conftest.py  test_minimal.py  test_modin_extra.py
(+26 files in other folders)
