[project]
name = "liken"
version = "0.3.1"
description = "A Python library for near deduplication and record linkage."
authors = [{ name = "VictorAut" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "duplicates",
    "deduplication",
    "record linkage",
    "canonicalization",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.2.3,<3",
    "polars>=1.24.0,<2",
    "rapidfuzz>=3.12.2,<4",
    "scikit-learn>=1.6.1,<2",
    "sparse-dot-topn>=1.1.5,<2",
    "typing-extensions>=4.13.0,<5",
    "pyspark>=3.5.5,<4",
    "datasketch>=1.8.0,<2",
    "networkx>=3.6.1,<4",
    "pyarrow>=23.0.1,<24",
    "faker>=37.12.0",
]

[project.urls]
Repository = "https://github.com/VictorAut/liken/"
Documentation = "https://victorautonell-oiry.me/liken/liken.html"

[dependency-groups]
dev = [
    "ipython>=9.0.2,<10 ; python_full_version >= '3.11'",
    "ipykernel>=6.29.5,<7",
]
lint = [
    "mypy>=1.15.0,<2",
    "pandas-stubs>=2.2.3.250308,<3 ; python_full_version >= '3.10'",
    "ruff>=0.15.2",
    "scipy-stubs>=1.15.2.1,<2 ; python_full_version >= '3.10'",
    "types-networkx>=3.6.1.20251220,<4",
]
test = [
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=1.0.0,<2",
    "mkdocs-material>=9.7.1,<10",
    "markdown-pycon>=1.0.1,<2",
]


[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"


# LINTING


[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
warn_no_return = false
allow_redefinition = true


[[tool.mypy.overrides]]
module = ["datasketch.*", "sklearn.*", "sparse_dot_topn.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 120
